--- a/custom_components/oasis_mini/translations/en.json
+++ b/custom_components/oasis_mini/translations/en.json
@@ -6,6 +6,11 @@
           "host": "Host"
         }
       },
+      "reconfigure": {
+        "data": {
+          "host": "Host"
+        }
+      },
       "reauth_confirm": {
         "data": {}
       }
@@ -17,7 +22,9 @@
       "unknown": "Unexpected error"
     },
     "abort": {
-      "already_configured": "Device is already configured"
+      "already_configured": "Device is already configured",
+      "reauth_successful": "Re-authentication was successful",
+      "reconfigure_successful": "Re-configuration was successful"
     }
   },
   "options": {
