Add additional features

--- a/custom_components/oasis_mini/translations/en.json
+++ b/custom_components/oasis_mini/translations/en.json
@@ -26,6 +26,7 @@
   "options": {
     "step": {
       "init": {
+        "description": "Add your cloud credentials to get additional information about your Oasis Mini",
         "data": {
           "email": "Email",
           "password": "Password"
