Handle invalid index bug in play random track button

--- a/custom_components/oasis_mini/translations/en.json
+++ b/custom_components/oasis_mini/translations/en.json
@@ -26,7 +26,7 @@
   "options": {
     "step": {
       "init": {
-        "description": "Add your cloud credentials to get additional information about your Oasis Mini",
+        "description": "Add your cloud credentials to get additional information about your device",
         "data": {
           "email": "Email",
           "password": "Password"
